# neo4j-intake

./: .gitignore  README.md  pyproject.toml
neo4j_intake/: __init__.py  database.py  models.py  n4j.py
tests/: test_database.py
